fixed statbar alignment

--- a/client/src/pages/PlayersPage/PlayerStats/PlayerStatistic/PlayerStatistic.module.css
+++ b/client/src/pages/PlayersPage/PlayerStats/PlayerStatistic/PlayerStatistic.module.css
@@ -5,4 +5,5 @@
 
 p{
     width: 87px;
+    flex-shrink: 0;
 }
